@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,19 +25,12 @@ import org.testng.annotations.Test;
 import static test.jextract.test7903347.test7903347_h.*;
 
 /*
- * @test id=classes
+ * @test
  * @bug 7903347
  * @summary add long name option for all single letter options and expand help on default values for various options
  * @library /lib
- * @run main/othervm JtregJextract --library Test7903347 -t test.jextract.test7903347 test7903347.h
- * @run testng/othervm --enable-native-access=ALL-UNNAMED LibTest7903347Test
- */
-/*
- * @test id=sources
- * @bug 7903347
- * @summary add long name option for all single letter options and expand help on default values for various options
- * @library /lib
- * @run main/othervm JtregJextractSources --library Test7903347 -t test.jextract.test7903347 test7903347.h
+ * @run main/othervm JtregJextract --library Test7903347 --use-system-load-library -t test.jextract.test7903347 test7903347.h
+ * @build LibTest7903347Test
  * @run testng/othervm --enable-native-access=ALL-UNNAMED LibTest7903347Test
  */
 public class LibTest7903347Test {
