@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,20 +30,13 @@ import static org.testng.Assert.assertTrue;
 import static test.jextract.test8246400.test8246400_h.*;
 
 /*
- * @test id=classes
+ * @test
  * @bug 8246400
  * @summary jextract should generate a utility to manage mutliple MemorySegments
  * @library /lib
- * @run main/othervm JtregJextract -l Test8246400 -t test.jextract.test8246400 test8246400.h
+ * @run main/othervm JtregJextract -l Test8246400 --use-system-load-library -t test.jextract.test8246400 test8246400.h
+ * @build LibTest8246400Test
  * @run testng/othervm --enable-native-access=ALL-UNNAMED  LibTest8246400Test
- */
-/*
- * @test id=sources
- * @bug 8246400
- * @summary jextract should generate a utility to manage mutliple MemorySegments
- * @library /lib
- * @run main/othervm JtregJextractSources -l Test8246400 -t test.jextract.test8246400 test8246400.h
- * @run testng/othervm --enable-native-access=ALL-UNNAMED LibTest8246400Test
  */
 public class LibTest8246400Test {
     @Test
@@ -51,21 +44,21 @@ public class LibTest8246400Test {
         MemorySegment sum = null;
         try (Arena arena = Arena.ofConfined()) {
             var v1 = Vector.allocate(arena);
-            Vector.x$set(v1, 1.0);
-            Vector.y$set(v1, 0.0);
+            Vector.x(v1, 1.0);
+            Vector.y(v1, 0.0);
 
             var v2 = Vector.allocate(arena);
-            Vector.x$set(v2, 0.0);
-            Vector.y$set(v2, 1.0);
+            Vector.x(v2, 0.0);
+            Vector.y(v2, 1.0);
 
             sum = add(arena, v1, v2);
 
-            assertEquals(Vector.x$get(sum), 1.0, 0.1);
-            assertEquals(Vector.y$get(sum), 1.0, 0.1);
+            assertEquals(Vector.x(sum), 1.0, 0.1);
+            assertEquals(Vector.y(sum), 1.0, 0.1);
 
             MemorySegment callback = cosine_similarity$dot.allocate((a, b) -> {
-                return (Vector.x$get(a) * Vector.x$get(b)) +
-                    (Vector.y$get(a) * Vector.y$get(b));
+                return (Vector.x(a) * Vector.x(b)) +
+                    (Vector.y(a) * Vector.y(b));
             }, arena);
 
             var value = cosine_similarity(v1, v2, callback);
